backend_user_authentication

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,7 +1,7 @@
 
 port=8080
 mongourl=mongodb+srv://manish63singh:mongodb@cluster0.tz7om47.mongodb.net/e_commerce_backend?retryWrites=true&w=majority
-saltround=4
+saltrounds=4
 
 
 we have to put the db name into it(whatever we want to name out database)
